--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.4.Final</version>
+        </dependency>
     </dependencies>
 </project>
